--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ baseFontFamily=Times New Roman
 headerFontFamily=Arial
 baseFontSize=12pt
 tableFontSize=10pt
+lineHeight=1.5em
 
 # Bookmark Settings
 bookmarkHeaders=true
