--- a/web-app/backend/pom.xml
+++ b/web-app/backend/pom.xml
@@ -75,8 +75,30 @@
             <version>${commons-io.version}</version>
         </dependency>
 
-        <!-- Note: FOP, Batik, and other conversion dependencies will be added 
-             when integrating with existing NIMAS conversion logic -->
+        <!-- XML Processing and PDF Generation -->
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>fop</artifactId>
+            <version>2.8</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-all</artifactId>
+            <version>1.16</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>net.sf.saxon</groupId>
+            <artifactId>Saxon-HE</artifactId>
+            <version>12.3</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>xmlgraphics-commons</artifactId>
+            <version>2.8</version>
+        </dependency>
 
         <!-- Testing -->
         <dependency>
