--- a/web-app/backend/src/main/resources/application.properties
+++ b/web-app/backend/src/main/resources/application.properties
@@ -18,6 +18,9 @@ app.output.dir=outputs
 app.conversion.timeout=300000
 app.conversion.max-concurrent=5
 
+# Note: Conversion properties are now stored per NIMAS package in the database
+# Default values are defined in ConversionProperties.java
+
 # CORS Configuration
 app.cors.allowed-origins=http://localhost:3000,http://localhost:3001
 app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
