--- a/web-app/frontend/package.json
+++ b/web-app/frontend/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "axios": "^1.4.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -18,7 +18,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "test:ci": "react-scripts test --coverage --watchAll=false --ci"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +41,11 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0"
+  }
 }
