feat: implement OAuth2/OIDC authentication
- Add Spring Security OAuth2 dependencies
- Create User entity with roles and OAuth2 provider support
- Implement CustomOAuth2UserService for user registration/updates
- Add OAuth2UserInfo factory for multiple providers (Google, GitHub, Microsoft)
- Configure SecurityConfig with OAuth2 login and role-based access
- Add AuthController for authentication endpoints
- Configure OAuth2 properties for development and Docker
- Add comprehensive OAuth2 setup documentation

Supports:
- Google OAuth2 (recommended)
- GitHub OAuth2 (developer-focused)
- Microsoft/Azure OAuth2 (enterprise)
- Role-based access control (USER, ADMIN, VIEWER)
- First user auto-admin assignment
- Session management and CORS configuration

--- a/backend/src/main/resources/application-docker.properties
+++ b/backend/src/main/resources/application-docker.properties
@@ -42,3 +42,17 @@ app.conversion.max-concurrent=3
 app.cors.allowed-origins=http://localhost:3000,http://localhost:3001,http://frontend:3000
 app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 app.cors.allowed-headers=*
+
+# OAuth2 Configuration for Docker
+# Override OAuth2 redirect URIs for Docker environment
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/login/oauth2/code/github
+spring.security.oauth2.client.registration.microsoft.redirect-uri=http://localhost:8080/login/oauth2/code/microsoft
+
+# Session Configuration for Docker
+server.servlet.session.cookie.domain=localhost
+server.servlet.session.cookie.path=/
+server.servlet.session.cookie.http-only=true
+
+# Security logging for Docker
+logging.level.org.springframework.security=INFO
