security: protect OAuth2 credentials in .env files
- Add comprehensive .env patterns to .gitignore
- Exclude all environment files (.env, .env.local, etc.) from version control
- Add specific patterns for both project root and backend directories
- Create env.example template with OAuth2 configuration examples
- Update OAUTH_SETUP.md to reference the example file
- Ensure sensitive OAuth2 client secrets are never committed

Security improvements:
- Protects Google, GitHub, Microsoft OAuth2 credentials
- Provides clear template for environment setup
- Prevents accidental credential exposure in git history

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,22 @@
+# Environment Variables (OAuth2 credentials and secrets)
+.env
+.env.local
+.env.development
+.env.development.local
+.env.test
+.env.test.local
+.env.production
+.env.production.local
+!.env.example
+!env.example
+
 # Backend
 backend/target/
 backend/uploads/
 backend/outputs/
 backend/*.log
+backend/.env
+backend/.env.*
 
 # Frontend
 frontend/node_modules/
